--- a/src/templates/post.ejs
+++ b/src/templates/post.ejs
@@ -2,26 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>All Posts</title>
+    <title><%= post.name %></title>
     <link rel="stylesheet" href="/static/main.css">
 </head>
 <body>
     <header>
-        <h1>All Posts</h1>
-        <a href="/profile">Profile</a>
-        <button id="createButton">Create New Post</button>
+        <h1><%= post.name %></h1>
+        <a href="/posts">Back to All Posts</a>
     </header>
     <main>
-        <ul>
-            <% posts.forEach(post => { %>
-                <li>
-                    <a href="/posts/<%= post.id %>"><%= post.name %></a>
-                    <p><%= post.description %></p>
-                    <small>Author: <%= post.author %></small>
-                </li>
-            <% }); %>
-        </ul>
+        <p><%= post.description %></p>
+        <small>Author: <%= post.author %></small>
+        <p>Posted at: <%= new Date(post.time * 1000).toLocaleString() %></p>
+        <h2>Комментарии:</h2>
+            <% comments.forEach(comment => { %>
+                    <strong><%= comment.title %>:</strong> <%= comment.body %>
+            <% }) %>
     </main>
-    <script src="/static/posts.js"></script> 
 </body>
 </html>
